# hw4

./: pyproject.toml  requirements.txt  setup_env.sh
cas4160/agents/: sac_agent.py
cas4160/env_configs/: sac_config.py
cas4160/infrastructure/: utils.py
cas4160/scripts/: run_hw4.py
data/hw4_sac_reinforce1_HalfCheetah-v4_reinforce_s128_l3_alr0.0003_clr0.0003_b128_d0.99_t0.2_stu0.005_03-05-2026_16-19-32/: events.out.tfevents.1777792772.Henrys-MacBook-Pro.local
data/hw4_sac_sanity_invpendulum_reinforce_InvertedPendulum-v4_reinforce_s128_l3_alr0.0003_clr0.0003_b128_d0.99_t0.1_htu1000_03-05-2026_15-20-35/: events.out.tfevents.1777789235.Henrys-MacBook-Pro.local
data/hw4_sac_sanity_pendulum_Pendulum-v1_none_s128_l3_alr0.0003_clr0.0003_b128_d0.99_t0.1_htu1000_03-05-2026_12-53-49/: events.out.tfevents.1777780429.Henrys-MacBook-Pro.local
data/hw4_sac_sanity_pendulum_Pendulum-v1_reinforce_s128_l3_alr0.0003_clr0.0003_b128_d0.99_stu0.005_02-05-2026_23-42-17/: events.out.tfevents.1777732937.Henrys-MacBook-Pro.local
latex/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
